--- a/MineSweeper/MineSweeper/MainWindow.xaml
+++ b/MineSweeper/MineSweeper/MainWindow.xaml
@@ -4,9 +4,14 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MineSweeper"
+        xmlns:localVM="clr-namespace:MineSweeper.ViewModels"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <Grid Height="auto" Width="auto" x:Name="MineFieldGrid">
+            <Grid.DataContext>
+                <localVM:GameScreenViewModel/>
+            </Grid.DataContext>
+        </Grid>
     </Grid>
 </Window>
